job title corrected, CDEI explained

--- a/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd
+++ b/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd
@@ -16,7 +16,7 @@ This summer, the UK Office for Statistics Regulation (OSR) published its report 
 
 The report also warns that "unless significant changes are implemented... progress that has been made could be lost and the potential for data sharing and linkage to deliver public good will not be achieved." 
 
-To find out more about the report and its recommendations for change, we sat down with Helen Miller-Bakewell, OSR's head of impact and development. Listen to the full interview below or on YouTube.
+To find out more about the report and its recommendations for change, we sat down with Helen Miller-Bakewell, OSR's head of development and impact. Listen to the full interview below or on YouTube.
 
 {{< video https://www.youtube.com/embed/72eqvS34n7c?si=tzoiivVk-m4su1aT >}}
 
@@ -62,7 +62,7 @@ I did ask a couple of colleagues if they wanted to throw me any other examples o
 Yeah, and I would like to talk about some of those recommendations, I guess the more technical side of the recommendations, a bit, a bit later. One thing I wanted to ask you now about was about a word that sort of jumped out at me in, in the report was this idea of needing there to be a social licence for data sharing. And in the report, social licence has, has been defined as the, like, the level of acceptance or approval in local communities for data linkage projects. Now, I guess for something like the pandemic, right, you can argue that there is a kind of an implicit social licence, it was an emergency situation, there was, you know, people at risk. So that sort of use case was kind of justified, but I was curious about how social licences for these things can best be established and, and maintained, because that's about kind of interaction with the public, right? You know, you could put a load of government statisticians and data scientists into a room and say, what could you do with this, all this data and how you could, could you link it all together? And they'd get very excited about it? But actually, then, how do you then take that to the public and convince them that it's a good idea, or are there other ways of making sure this social licence has been obtained?
 
 **Helen Miller-Bakewell**  
-So, social licence and public engagement were one of the topics that was good, most consistently mentioned across the interview-- interviews we held. And yeah, there just seemed to be a consensus which we would support that those working on data sharing and linkage should be prioritising public engagement around their work, both to kind of gauge the amount of social licence that there might be, or any sticking points, and potentially start to build social licence as well. And I think, you know, it's really great to see people thinking like that, and I would actually say as well, it seems to be a recurring theme. And it's really nice to see that having prominence. Another finding from the interviews was, you know, the flip side of this, yes, people think it's important, but often people can not quite know how to approach public engagement, building social licence. And there are actually a few examples we highlight in the report where we, where we think public engagement has been done, done well, hopefully, to kind of inspire people. I would say, you know, I have a few kind of overarching thoughts on what can be important. And I think it, it comes so much to trust and trustworthiness. And I think the way, some ways that you can support trust with the public are transparency, saying what you're going to do and why, and how, and actually the outcomes as well, when possible, let's sit closing the circle. Thinking about this interview, I remembered OSR ran a public dialogue last year with ADR UK. And we were trying to talk to members of the public about what they understand by the public good of statistics and data. And one of the messages that came up there was people want to feel the impact their data and feel that outcome. And they don't always feel they get that knowledge back. Like, what, what was, so what was the outcome of you having my data and doing these things that you kind of said you would do? So yeah, transparency, and then kind of linked to that, I guess, like continuous engagement, and considered engagement. And the public is not a homogenous group, there will be different groups that are important to engage for different data sharing, different data linkage projects, and you kind of need to consider who are the people you need to really engage with for your specific initiatives. And then it's, I'm afraid you can't just do one survey or one focus group, there needs to be some kind of mechanism for getting more continuous engagement to keep an eye on actually, how are people feeling now, because we know that social licence and people's feelings about sharing data, it can be context dependent, it can be time dependent. And actually the first couple of recommendations in the report, so right there at one and two, number one is about the value of trackers like CDEI's Public Attitudes Survey, which, you know, are run on a semi-regular basis to try and track how the public are feeling at a high level about questions around data. And then our second recommendation is about having an organisation that can do more to produce guidance and support people doing research to do public engagement well.
+So, social licence and public engagement were one of the topics that was good, most consistently mentioned across the interview-- interviews we held. And yeah, there just seemed to be a consensus which we would support that those working on data sharing and linkage should be prioritising public engagement around their work, both to kind of gauge the amount of social licence that there might be, or any sticking points, and potentially start to build social licence as well. And I think, you know, it's really great to see people thinking like that, and I would actually say as well, it seems to be a recurring theme. And it's really nice to see that having prominence. Another finding from the interviews was, you know, the flip side of this, yes, people think it's important, but often people can not quite know how to approach public engagement, building social licence. And there are actually a few examples we highlight in the report where we, where we think public engagement has been done, done well, hopefully, to kind of inspire people. I would say, you know, I have a few kind of overarching thoughts on what can be important. And I think it, it comes so much to trust and trustworthiness. And I think the way, some ways that you can support trust with the public are transparency, saying what you're going to do and why, and how, and actually the outcomes as well, when possible, let's sit closing the circle. Thinking about this interview, I remembered OSR ran a public dialogue last year with ADR UK. And we were trying to talk to members of the public about what they understand by the public good of statistics and data. And one of the messages that came up there was people want to feel the impact their data and feel that outcome. And they don't always feel they get that knowledge back. Like, what, what was, so what was the outcome of you having my data and doing these things that you kind of said you would do? So yeah, transparency, and then kind of linked to that, I guess, like continuous engagement, and considered engagement. And the public is not a homogenous group, there will be different groups that are important to engage for different data sharing, different data linkage projects, and you kind of need to consider who are the people you need to really engage with for your specific initiatives. And then it's, I'm afraid you can't just do one survey or one focus group, there needs to be some kind of mechanism for getting more continuous engagement to keep an eye on actually, how are people feeling now, because we know that social licence and people's feelings about sharing data, it can be context dependent, it can be time dependent. And actually the first couple of recommendations in the report, so right there at one and two, number one is about the value of trackers like CDEI's [Centre for Data Ethics and Innovation] Public Attitudes Survey, which, you know, are run on a semi-regular basis to try and track how the public are feeling at a high level about questions around data. And then our second recommendation is about having an organisation that can do more to produce guidance and support people doing research to do public engagement well.
 
 **Brian Tarran**    
 Does the mission statement of statistics for the public good, does that kind of help guide the approach, right? So any data linkage, data sharing project, you need to understand, you need to think about okay, what's the public good that we're trying to achieve here? And then that becomes your, almost the point, the focal point of the discussion with the public about why we want to do this and why we think there'll be a benefit.
