image and description added

--- a/viewpoints/posts/2023/10/20/ai-for-humanity.qmd
+++ b/viewpoints/posts/2023/10/20/ai-for-humanity.qmd
@@ -1,15 +1,15 @@
 ---
 title: "An AI for humanity"
-# description: |
-#   In organisations, data scientists are not the only players who get to influence how data and data science are presented and used -- so they need to be on their guard for misleading or distorted presentations of their work, as Ed Humpherson explains. 
+description: |
+  Public funding is needed for an 'AI for humanity' project, modelled on the Human Genome Project, argues Martin Goodson. How else can we ensure the benefits of AI are spread widely and not concentrated in the hands of technology companies?
 categories:
   - AI
   - Open source
 author: Martin Goodson
 date: 10/20/2023
 toc: true
-# image: images/distorted-data.png
-# image-alt: A collection of data, viewed through a distorted lens, digital art, created by Bing Image Creator.
+image: images/etienne-girardet-_HO6LmpGDl8-unsplash.png
+image-alt: Wall stencilled with the phrase '# Leave no one behind'.
 format:
   html:
     include-in-header: 
@@ -91,7 +91,9 @@ About the author
 ::: {.g-col-12 .g-col-md-12}
 Copyright and licence
 : &copy; 2023 Martin Goodson
-  
+
+Thumbnail image by <a href="https://unsplash.com/@etiennegirardet?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Etienne Girardet</a> on <a href="https://unsplash.com/photos/a-red-wall-with-a-white-sticker-on-it-_HO6LmpGDl8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.
+
 :::
 :::
 :::
