--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!data-sharing-in-gov.qmd"
+    - "!ai-for-humanity.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -37,17 +37,17 @@ listing:
     max-items: 3
     feed: false
 
-  - id: ideas
-    contents: 
-    - /ideas
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: ideas
+  #   contents: 
+  #   - /ideas
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   - id: careers
     contents: 
@@ -65,6 +65,7 @@ listing:
     contents: 
     - /viewpoints/posts
     - "!index.qmd"
+    - "!ai-for-humanity.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -97,17 +98,19 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: interviews
-  #   contents: 
-  #   - /viewpoints/interviews
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: interviews
+    contents: 
+    - /viewpoints/interviews
+    - "!index.qmd"
+    - "!data-sharing-in-gov.qmd"
+    - "!london-data-week.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   # - id: career-profiles
   #   contents: 
@@ -125,15 +128,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd">
+<a href="/viewpoints/posts/2023/10/20/ai-for-humanity.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'Feelings about sharing data can be context and time dependent -- you can't just do one survey or focus group'
-Real World Data Science sits down with Helen Miller-Bakewell of the UK Office for Statistics Regulation to talk data sharing and linkage in government -- progress made, hurdles to overcome, the importance of public engagement, and why 'social licence' is key.  
+## 'Do we want a world where we let technology companies gain total control over artificial intelligence?'
+Public funding is needed for an 'AI for humanity' project, modelled on the Human Genome Project, argues Martin Goodson. How else can we ensure the benefits of AI are spread widely and not concentrated in the hands of technology companies?  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/10/16/images/helen-miller-bakewell.png)
+![](viewpoints/posts/2023/10/20/images/etienne-girardet-_HO6LmpGDl8-unsplash.png)
 :::
 :::
 
@@ -181,12 +184,12 @@ Mohammed Mohammed on creating the R-Girls School Network
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Viewpoints 
+## Interviews 
 </a>
 
-::: {#viewpoints}
+::: {#interviews}
 :::
 
 :::
@@ -223,12 +226,12 @@ Ed Humpherson on how not to be misleading
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="ideas/index.qmd">
+<a href="viewpoints/index.qmd">
 
-## Data Science Ideas
+## Viewpoints
 </a> 
 
-::: {#ideas}
+::: {#viewpoints}
 :::
 
 :::
