--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!ai-for-humanity.qmd"
+    - "!evaluating-ai.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -49,17 +49,17 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: careers
-    contents: 
-    - /careers/posts
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: careers
+  #   contents: 
+  #   - /careers/posts
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   - id: viewpoints
     contents: 
@@ -74,17 +74,18 @@ listing:
     max-items: 3
     feed: false
 
-  # - id: editors-blog
-  #   contents: 
-  #   - /viewpoints/editors-blog
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: editors-blog
+    contents: 
+    - /viewpoints/editors-blog
+    - "!index.qmd"
+    - "!october-events.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   # - id: datasciencebites
   #   contents: 
@@ -98,23 +99,9 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: interviews
-    contents: 
-    - /viewpoints/interviews
-    - "!index.qmd"
-    - "!data-sharing-in-gov.qmd"
-    - "!london-data-week.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
-
-  # - id: career-profiles
+  # - id: interviews
   #   contents: 
-  #   - /careers/career-profiles
+  #   - /viewpoints/interviews
   #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
@@ -124,19 +111,31 @@ listing:
   #   max-items: 3
   #   feed: false
 
+  - id: career-profiles
+    contents: 
+    - /careers/career-profiles
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
 toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/posts/2023/10/20/ai-for-humanity.qmd">
+<a href="/viewpoints/interviews/posts/2023/10/25/evaluating-ai.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'Do we want a world where we let technology companies gain total control over artificial intelligence?'
-Public funding is needed for an 'AI for humanity' project, modelled on the Human Genome Project, argues Martin Goodson. How else can we ensure the benefits of AI are spread widely and not concentrated in the hands of technology companies?  
+## 'Statistics and data science are at the heart of the AI movement -- we want to be a strong voice in the debate'
+Royal Statistical Society president Andrew Garrett talks AI model evaluation and risk, and why training data and model inputs deserve greater attention in discussions over AI safety.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/posts/2023/10/20/images/etienne-girardet-_HO6LmpGDl8-unsplash.png)
+![](viewpoints/interviews/posts/2023/10/25/images/andy-garrett.png)
 :::
 :::
 
@@ -171,11 +170,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## One key thing to note is that we didn’t set out to teach programming. The history of computer science in our school is that computer science was really not liked at all by the girls. They wouldn’t choose it as a subject to pursue further. So, we decided to use R to support other subjects. This was a key strategic decision, really.
-Mohammed Mohammed on creating the R-Girls School Network
+## The way I’ve always differentiated between data analytics and data science is that if you want to make repeated decisions on a daily or weekly basis, then that’s when it becomes more about a data science question versus a data analytics question. Data analytics is generally about answering large, one off, ad-hoc questions, whereas data science is about making repeated decisions using data and the scientific method.
+Niclas Thomas, head of data science, Next
 
 ::: {.button}
-[Learn more about the R-Girls project](viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd)
+[Discover Niclas's career story](careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd)
 :::
 
 :::
@@ -184,12 +183,12 @@ Mohammed Mohammed on creating the R-Girls School Network
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="careers/career-profiles/index.qmd">
 
-## Interviews 
+## Career profiles 
 </a>
 
-::: {#interviews}
+::: {#career-profiles}
 :::
 
 :::
@@ -213,11 +212,11 @@ Mohammed Mohammed on creating the R-Girls School Network
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Pseudo data science is a term we use to describe attempts to pass off crude work as being more data science-y than it really is. That reflects a sense in public life that data science is new, innovative, somehow the Future. In this context, people who are not data scientists can be tempted to dress themselves up in the clothes of data science to enhance their credibility. The trouble is, it can sometimes backfire.
-Ed Humpherson on how not to be misleading
+## One key thing to note is that we didn’t set out to teach programming. The history of computer science in our school is that computer science was really not liked at all by the girls. They wouldn’t choose it as a subject to pursue further. So, we decided to use R to support other subjects. This was a key strategic decision, really.
+Mohammed Mohammed on creating the R-Girls School Network
 
 ::: {.button}
-[Read the full article](viewpoints/posts/2023/09/18/pseudo-data-science.qmd)
+[Learn more about the R-Girls project](viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd)
 :::
 
 :::
@@ -239,12 +238,12 @@ Ed Humpherson on how not to be misleading
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="careers/index.qmd">
+<a href="viewpoints/editors-blog/index.qmd">
 
-## Data Science Careers 
+## Editors' blog 
 </a>
 
-::: {#careers}
+::: {#editors-blog}
 :::
 
 :::
