--- a/viewpoints/interviews/posts/2023/10/25/evaluating-ai.qmd
+++ b/viewpoints/interviews/posts/2023/10/25/evaluating-ai.qmd
@@ -55,7 +55,7 @@ We have a really important role to play in focusing attention not only on AI out
 :::
 
 **A lot of the focus of the AI debate is on outputs. Should we be talking more about inputs -- the data the models are trained on, where the data is coming from, and issues of quality and bias, etc.?**\
-There should be more discussion of this, yes. Statisticians and data scientists, but statisticians in particular, are trained very much around the data generating process, so we naturally think about how data is gathered, the potential biases in a dataset, and the representation that you need for a study. We understand that the data going in is as important as the outputs produced. And I think it's becoming more and more necessary to understand where exactly the data is coming from, whether it's diverse, whether it's representative of the populations you want to study, and so on. This is an incredibly important area, and provenance of data -- like provenance of information -- will become ever more important. So, with large language models, for example, what information is it trained on? Did the developers have permission to use that information? How representative is that information? These sorts of questions need to be addressed, because your outputs will only ever be as good as your inputs.
+There should be more discussion of this, yes. Statisticians and data scientists, but statisticians in particular, are trained very much around the data generating process, so we naturally think about how data is gathered, the potential biases in a dataset, and the representation that you need for a study. We understand that the data going in is as important as the outputs produced. And I think it's becoming more and more necessary to understand where exactly the data is coming from, whether it's diverse, whether it's representative of the populations you want to study, and so on. This is an incredibly important area, and provenance of data -- like provenance of information -- will become ever more important. So, with a large language model, for example, what information is it trained on? Did the developers have permission to use that information? How representative is that information? These sorts of questions need to be addressed, because your outputs will only ever be as good as your inputs.
 
 **AI systems are having wide-reaching effects across society. What impact are AI tools having on the work of statisticians and data scientists, and how would you evaluate the impacts so far: good, bad, or neutral?**\
 You have to be a cynic and an evangelist at the same time. There is some very good work being done but also some very naive work. AI is not magic. It requires the same thoroughness and lifecycle management as anything else. Certainly in terms of pattern recognition, image recognition, it's been very useful. On MRI images, for example, can you reduce the amount of time humans need to spend looking at the data because you have an AI tool helping with the assessment? Of course, the challenge is then, when you have an AI assessment, what do you compare it to? You could compare it to what an expert would assess, but is that a suitable reference point for saying something is a good system, knowing that humans themselves are not perfect? AI systems are able to handle large datasets, large images, very quickly. And so the speed of being able to do that has a potential advantage, although it depends on the level of human oversight. Where we're seeing these tools being advantageous, I think, is where you have some human oversight but some of the heavy lifting is being done by the AI systems.
@@ -64,7 +64,7 @@ You have to be a cynic and an evangelist at the same time. There is some very go
 We've got some very good practitioners on the panel, and I'm hoping that we'll generate some really good discussion from the panel and some really good questions from the audience. When it comes to the AI conversation generally, there's a danger that it has focused too much so far on either the academic view of things or the large tech company perspective, so we're probably missing out a whole tranche of people who are working at the coalface on these things, working in smaller companies. So, I'd like to understand a little bit more about what is happening in that part of industry. I know there's a big focus on things like building out capability in the UK, and that's not simply a question of having people with expertise -- it's about having access to things like the right sort of computing environments. So, I think there's going to be some interesting discussion around what's holding back industry. Overall, though, what I'd like to see come out of this meeting is a more proportionate response, from people who are working on this on a day-to-day basis. Statisticians are good at that -- at coming up with a measured response, an informed response. Do we have the same concerns about the existential threat of AI that have been discussed by some of the larger companies, for example?
 
 **Aside from coming along and contributing to this panel discussion, how else can statisticians and data scientists engage with the AI debate and help shape a collective response to this major issue?**\
-I'd certainly encourage them to join the RSS and be a part of our work on this. We want to be a strong voice in the debate on AI because it is underpinned by statistical and mathematical techniques, as I mentioned at the start. We have a really important role to play in focusing attention not only on AI outputs but on inputs. That is an area that hasn't received enough attention but it is one that statisticians understand incredibly well -- and it's one that brings into discussion issues such as ethics, consent, copyright, etc., and that's very much where we where we should be engaging as well.
+I'd certainly encourage them to join the RSS and be a part of our work on this. We want to be a strong voice in the debate on AI because it is underpinned by statistical and mathematical techniques, as I mentioned at the start. We have a really important role to play in focusing attention not only on AI outputs but on inputs. That is an area that hasn't received enough attention but it is one that statisticians understand incredibly well -- and it's one that brings into discussion issues such as ethics, consent, copyright, etc., and that's very much where we should be engaging as well.
 
 ::: {.callout-note appearance="simple"}
 Register now for ["Evaluating artificial intelligence: How data science and statistics can make sense of AI models,"](https://rss.org.uk/training-events/events/events-2023/rss-events/evaluating-artificial-intelligence-how-data-scienc/#fulleventinfo) a free, in-person debate at the RSS offices in London, 4 pm -- 6 pm, Tuesday, October 31.
