--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ editor: source
 sidebar: false
 search: false
 description: | 
-  A showcase for data science in action, brought to you by the Royal Statistical Society
+  A showcase for data science in action, brought to you by the Royal Statistical Society in partnership with the American Statistical Association.
 image: images/rwds-logo-150px.png
 listing:
   - id: latest-content
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!evaluating-ai.qmd"
+    - "!ai-conf-panel.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/10/25/evaluating-ai.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/10/30/ai-conf-panel.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'Statistics and data science are at the heart of the AI movement -- we want to be a strong voice in the debate'
-Royal Statistical Society president Andrew Garrett talks AI model evaluation and risk, and why training data and model inputs deserve greater attention in discussions over AI safety.  
+## How data science and statistics can shape the UK's AI strategy
+At the Royal Statistical Society Conference this September, Real World Data Science brought together data scientists, statisticians, and policy experts to discuss the urgent topic of artificial intelligence -- risks, benefits, evaluation, and regulation. Watch the panel discussion in full!  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/10/25/images/andy-garrett.png)
+![](viewpoints/editors-blog/posts/2023/10/30/images/panel.png)
 :::
 :::
 
