--- a/viewpoints/editors-blog/posts/2023/10/30/ai-conf-panel.qmd
+++ b/viewpoints/editors-blog/posts/2023/10/30/ai-conf-panel.qmd
@@ -1,7 +1,7 @@
 ---
 title: "How data science and statistics can shape the UK's AI strategy"
 description: |
-  At the Royal Statistical Society (RSS) Conference this September, Real World Data Science brought together data scientists, statisticians, and policy experts to discuss the urgent topic of artificial intelligence -- risks, benefits, evaluation, and regulation. Watch the panel discussion in full!
+  At the Royal Statistical Society Conference this September, Real World Data Science brought together data scientists, statisticians, and policy experts to discuss the urgent topic of artificial intelligence -- risks, benefits, evaluation, and regulation. Watch the panel discussion in full!
 categories:
   - AI
   - Large language models
