ed blog listing updated

--- a/index.qmd
+++ b/index.qmd
@@ -78,7 +78,7 @@ listing:
     contents: 
     - /viewpoints/editors-blog
     - "!index.qmd"
-    - "!october-events.qmd"
+    - "!ai-conf-panel.qmd"
     sort: "date desc"
     type: grid
     categories: false
