--- a/ideas/posts/2023/11/06/how-to-open-science-1-11.qmd
+++ b/ideas/posts/2023/11/06/how-to-open-science-1-11.qmd
@@ -9,8 +9,8 @@ categories:
   - Reproducible research
 author: Isabel Sassoon
 date: 11/06/2023
-# image: 
-# image-alt: 
+image: images/basil-james-iC4BsZQaREg-unsplash.png
+image-alt: Open lock and key. Photo by Basil James on Unsplash.
 toc: true
 format:
   html:
@@ -192,14 +192,15 @@ Copyright and licence
 
 :   © 2023 Isabel Sassoon
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a> Thumbnail photo by <a href="https://unsplash.com/@the_photoman?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Basil James</a> on <a href="https://unsplash.com/photos/gray-stainless-steel-padlock-iC4BsZQaREg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.
+
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 
 How to cite
 
-:   Sassoon, Isabel. 2023. "How to 'Open Science'" Real World Data Science, Month XX, 2023. [URL](https://realworlddatascience.net/ideas/posts/2023/xx/xx/how-to-open-science-1-1.html)
+:   Sassoon, Isabel. 2023. "How to 'open science': A brief guide to principles and practices." Real World Data Science, November 6, 2023. [URL](https://realworlddatascience.net/ideas/posts/2023/11/06/how-to-open-science.html)
 :::
 :::
 :::
