homepage and intro updated

--- a/ideas/posts/2023/11/06/how-to-open-science.qmd
+++ b/ideas/posts/2023/11/06/how-to-open-science.qmd
@@ -1,7 +1,7 @@
 ---
 title: "How to 'open science': A brief guide to principles and practices"
 description: |
-  As a university lecturer, Isabel Sassoon made frequent use of open data resources for teaching and research. But it was only recently that she fully learned to embrace and apply the principles, tools, and processes of 'open science' to her own work. In this short guide, Sassoon explains how others can do the same.
+  As a university lecturer, Isabel Sassoon made frequent use of open data resources for teaching and research. But it was only recently that she fully learned to embrace and apply the principles, tools, and processes of 'open science' to her own work. In this short guide, Sassoon explains how you can do the same.
 categories: 
   - Open science
   - Open source
