--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!ai-conf-panel.qmd"
+    - "!how-to-open-science.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/10/30/ai-conf-panel.qmd">
+<a href="/ideas/posts/2023/11/06/how-to-open-science.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## How data science and statistics can shape the UK's AI strategy
-At the Royal Statistical Society Conference this September, Real World Data Science brought together data scientists, statisticians, and policy experts to discuss the urgent topic of artificial intelligence -- risks, benefits, evaluation, and regulation. Watch the panel discussion in full!  
+## How to 'open science': A brief guide to principles and practices
+As a university lecturer, Isabel Sassoon made frequent use of open data resources for teaching and research. But it was only recently that she fully learned to embrace and apply the principles, tools, and processes of 'open science' to her own work. In this short guide, Sassoon explains how you can do the same.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/10/30/images/panel.png)
+![](ideas/posts/2023/11/06/images/basil-james-iC4BsZQaREg-unsplash.png)
 :::
 :::
 
@@ -170,11 +170,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## The way I’ve always differentiated between data analytics and data science is that if you want to make repeated decisions on a daily or weekly basis, then that’s when it becomes more about a data science question versus a data analytics question. Data analytics is generally about answering large, one off, ad-hoc questions, whereas data science is about making repeated decisions using data and the scientific method.
-Niclas Thomas, head of data science, Next
+## We think data can be more powerful when it’s linked, and when it’s made accessible -- in a secure way -- to a wider audience for analysis. It can offer more insights and better fulfil its potential to serve the public goods.
+Helen Miller-Bakewell, UK Office for Statistics Regulation
 
 ::: {.button}
-[Discover Niclas's career story](careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd)
+[Listen to the interview](viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd)
 :::
 
 :::
@@ -212,11 +212,11 @@ Niclas Thomas, head of data science, Next
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## One key thing to note is that we didn’t set out to teach programming. The history of computer science in our school is that computer science was really not liked at all by the girls. They wouldn’t choose it as a subject to pursue further. So, we decided to use R to support other subjects. This was a key strategic decision, really.
-Mohammed Mohammed on creating the R-Girls School Network
+## The way I’ve always differentiated between data analytics and data science is that if you want to make repeated decisions on a daily or weekly basis, then that’s when it becomes more about a data science question versus a data analytics question. Data analytics is generally about answering large, one off, ad-hoc questions, whereas data science is about making repeated decisions using data and the scientific method.
+Niclas Thomas, head of data science, Next
 
 ::: {.button}
-[Learn more about the R-Girls project](viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd)
+[Discover Niclas's career story](careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd)
 :::
 
 :::
