--- a/ideas/posts/2023/11/06/how-to-open-science.qmd
+++ b/ideas/posts/2023/11/06/how-to-open-science.qmd
@@ -45,18 +45,18 @@ Open access
 
 Pre-print servers are online repositories that enable you to share versions of your manuscript before or while your manuscript is under review. Examples of such repositories include [ArXiv](https://arxiv.org/) and [MedRxiv](https://www.medrxiv.org/).
 
-![](images/pre-print.png){fig-align="center"}
+![](images/pre-print.png){fig-align="center" fig-alt="Screengrab of the MedRxiv page for a paper titled 'Why "one size fits all" is not enough when designing COVID-19 immunity certificates for domestic use: a UK wide cross-sectional online survey.'"}
 
 ::: {.figure-caption style="text-align: center;"}
 Pre-print server example from MedRxiv.
 :::
 :::
 
-One additional benefit of open science is that it supports [reproducible research](https://realworlddatascience.net/case-studies/posts/2023/06/15/road-to-reproducible-research.html). This means that others can download your data and code, run it, and see if they obtain the same results. To get the full benefit of open science and promote reproducibility, code needs to be written with enough explanations or comments to help others understand the logic of the various stages of an analysis.
+One additional benefit of open science is that it supports [reproducible research](https://realworlddatascience.net/case-studies/posts/2023/06/15/road-to-reproducible-research.html). This means that others can download your data and code, re-run the analysis, and see if they obtain the same results. To get the full benefit of open science and promote reproducibility, code needs to be written with enough explanations or comments to help others understand the logic of the various stages of an analysis.
 
 ## Steps to open science
 
-In this section, I will outline steps you can take to easily make your research open science. There will be situations where making all aspects of research open is not possible -- for example, due to privacy and consent issues related to data. It is still possible to share some elements of such projects, but potentially this involves additional work in either creating suitable demo data or even generating synthetic data in order to provide data that has comparable trends but preserves privacy. It may also be possible to share the data when it is requested on a case-by-case basis. I am not going to cover this here, but its worth considering whether open science is possible in each case.
+In this section, I will outline steps you can take to easily make your research open science. There will be situations where it is not possible to make all aspects of research open -- for example, due to privacy and consent issues related to data. It is still possible to share some elements of such projects, but potentially this involves additional work -- to create suitable demo data, say, or generate synthetic data in order to provide data that has comparable trends but preserves privacy. It may also be possible to share the data when it is requested on a case-by-case basis. I am not going to cover this here, but it is worth considering whether open science is possible in each case.
 
 ### Before you begin...
 
@@ -71,7 +71,7 @@ Pre-registration involves completing a form before you start your analysis to ex
 
 Below is an example of a pre-registration.
 
-![](images/pre-registration.png)
+![](images/pre-registration.png){fig-alt="Screengrab of a pre-registration document, detailing a research project's hypothesis, study type, and study design."}
 :::
 
 ### Step 1 {#step-1}
@@ -86,7 +86,7 @@ Does your research plan require you to write a lot of code for analysis purposes
 
 GitHub is a great tool for developing code collaboratively, but it may not be right for you -- or indeed the only tool to use -- if you have a lot of other material to work with and release as part of your research project. If that's the case:
 
--   Set up an area for your project on an open science repository such as OSF, Zenodo or Figshare. (If you use OSF then setting up an OSF repository is quick and easy -- head to [osf.io](osf.io). OSF allows many integrations, including to GitHub, through the use of add-ons.)
+-   Set up an area for your project on an open science repository such as OSF, Zenodo or Figshare. (If you use OSF then setting up an OSF repository is quick and easy -- head to [osf.io](https://osf.io/). OSF allows many integrations, including to GitHub, through the use of add-ons.)
 
 -   You can start by setting your repository as private and then make it public at the appropriate time.
 
@@ -116,9 +116,9 @@ This is by no means a complete list but instead features the apps and websites t
 
 ##### Open Science Framework (OSF)
 
-OSF is a free web app that supports researchers with sharing, archiving, registration and collaboration.The [Open Science Framework website](https://help.osf.io) is worth checking out and includes a guide to help users get started. Once a project is public in the OSF it will have a DOI and a permanent link, so it can be cited. OSF can also support the tracking of versions of your file. One drawback can be that there is a limit on the maximum size of file that can be uploaded.
+OSF is a free web app that supports researchers with sharing, archiving, registration and collaboration. The [Open Science Framework website](https://help.osf.io) is worth checking out and includes a guide to help users get started. Once a project is public in the OSF it will have a DOI and a permanent link, so it can be cited. OSF can also support the tracking of versions of your file. One drawback can be that there is a limit on the maximum size of file that can be uploaded.
 
-![](images/osf.png){width="80%" fig-align="center"}
+![](images/osf.png){width="80%" fig-align="center" fig-alt="Screengrab of an Open Science Framework repository for a project titled 'Why "one size fits all" is not enough when designing COVID-19 immunity certificates for domestic use: a UK wide cross-sectional online survey.'"}
 
 ::: {.figure-caption style="text-align: center;"}
 Sample OSF repository.
@@ -134,12 +134,12 @@ Another general purpose open repository. As with Figshare, [Zenodo](https://zeno
 
 ##### GitHub
 
-GitHub is a web app that offers distributed version control. It is very commonly used for software development, especially when there are multiple developers. Although you can share code and many file types through GitHub, accessing and collaborating on projects can be a daunting experience for those who are not familiar with the way GitHub works. Also, GitHub is not always required as it is possible to share your code through OSF, for example. If you want to know more about using GitHub in support of Open Science and reproducibility, read ["The road to reproducible research"](https://realworlddatascience.net/case-studies/posts/2023/06/15/road-to-reproducible-research.html).
+GitHub is a web app that offers distributed version control. It is very commonly used for software development, especially when there are multiple developers. Although you can share code and many file types through GitHub, accessing and collaborating on projects can be a daunting experience for those who are not familiar with the way GitHub works. Also, GitHub is not always required as it is possible to share your code through OSF, for example. If you want to know more about using GitHub in support of open science and reproducibility, read ["The road to reproducible research"](https://realworlddatascience.net/case-studies/posts/2023/06/15/road-to-reproducible-research.html).
 :::
 
 ## Example: my own route to open science
 
-In my case, my project did not involve a heavy amount of coding or a large number of researchers, so I opted to use [OSF](https://osf.io/jubv6/) to store the data, the ethics approval documents, the survey questions (which drove the data collection), the data in .csv format, and the outputs. I also then linked this to [Figshare](https://brunel.figshare.com/articles/dataset/Why_one_size_fits_all_is_not_enough_when_designing_COVID-19_immunity_certificates_for_domestic_use_a_UK_wide_cross-sectional_online_survey/16962895) from my institution and published the article on [MedRxiv](https://www.medrxiv.org/content/10.1101/2021.10.12.21264898v2) at the same time as I submitted it to a journal for review. The paper was eventually published in [BMJ Open](https://bmjopen.bmj.com/content/12/4/e058317). The steps I took in this case were sufficient for the work to be recognised as embracing open science principles.
+In my case, my project did not involve a heavy amount of coding or a large number of researchers, so I opted to use [OSF](https://osf.io/jubv6/) to store the ethics approval documents, the survey questions (which drove the data collection), the data in .csv format, and the outputs. I also then linked this to [Figshare](https://brunel.figshare.com/articles/dataset/Why_one_size_fits_all_is_not_enough_when_designing_COVID-19_immunity_certificates_for_domestic_use_a_UK_wide_cross-sectional_online_survey/16962895) from my institution and published the article on [MedRxiv](https://www.medrxiv.org/content/10.1101/2021.10.12.21264898v2) at the same time as I submitted it to a journal for review. The paper was eventually published in [BMJ Open](https://bmjopen.bmj.com/content/12/4/e058317). The steps I took in this case were sufficient for the work to be recognised as embracing open science principles.
 
 ## Plot your own route to open science
 
@@ -147,10 +147,10 @@ In my case, my project did not involve a heavy amount of coding or a large numbe
 
 ```{mermaid}
 flowchart TD
-  D("- Setup GitHub repo
+  D("- Set up GitHub repo
   - Set repo as private
   - Add collaborators")
-  F("- Setup an OSF repository
+  F("- Set up an OSF repository
   - Set project as private
   - Add collaborators and their ORCIDs")
   A(Pre-register statistical analysis plan?) -- Yes --> B(Complete pre-registration through, e.g., Open Science Framework) --> C(Does your research involve writing lots of code?) -- Yes --> D --> E(Do you plan to share data and other research material?) -- Yes --> F --> G(Research project is finished and ready to submit to journal or conference)
