attempted fix of broken fig-alt

--- a/ideas/posts/2023/11/06/how-to-open-science.qmd
+++ b/ideas/posts/2023/11/06/how-to-open-science.qmd
@@ -45,7 +45,7 @@ Open access
 
 Pre-print servers are online repositories that enable you to share versions of your manuscript before or while your manuscript is under review. Examples of such repositories include [ArXiv](https://arxiv.org/) and [MedRxiv](https://www.medrxiv.org/).
 
-![](images/pre-print.png){fig-align="center" fig-alt="Screengrab of the MedRxiv page for a paper titled 'Why "one size fits all" is not enough when designing COVID-19 immunity certificates for domestic use: a UK wide cross-sectional online survey.'"}
+![](images/pre-print.png){fig-align="center" fig-alt="Screengrab of the MedRxiv page for a paper titled 'Why one size fits all is not enough when designing COVID-19 immunity certificates for domestic use: a UK wide cross-sectional online survey.'"}
 
 ::: {.figure-caption style="text-align: center;"}
 Pre-print server example from MedRxiv.
@@ -118,7 +118,7 @@ This is by no means a complete list but instead features the apps and websites t
 
 OSF is a free web app that supports researchers with sharing, archiving, registration and collaboration. The [Open Science Framework website](https://help.osf.io) is worth checking out and includes a guide to help users get started. Once a project is public in the OSF it will have a DOI and a permanent link, so it can be cited. OSF can also support the tracking of versions of your file. One drawback can be that there is a limit on the maximum size of file that can be uploaded.
 
-![](images/osf.png){width="80%" fig-align="center" fig-alt="Screengrab of an Open Science Framework repository for a project titled 'Why "one size fits all" is not enough when designing COVID-19 immunity certificates for domestic use: a UK wide cross-sectional online survey.'"}
+![](images/osf.png){width="80%" fig-align="center" fig-alt="Screengrab of an Open Science Framework repository for a project titled 'Why "one size fits all" is not enough when designing COVID-19 immunity certificates for domestic use.'"}
 
 ::: {.figure-caption style="text-align: center;"}
 Sample OSF repository.
